ðŸš€ LLEDO Industries - Version complÃ¨te avec auth, systÃ¨me avis clients, mobile ultra-optimisÃ© iOS/Android et blog SEO optimisÃ©

--- a/content/blog/bureau-etudes-egi-conception-mecanique.mdx
+++ b/content/blog/bureau-etudes-egi-conception-mecanique.mdx
@@ -1,9 +1,9 @@
 ---
-title: "EGI : Notre Bureau d'Études Mécanique"
+title: "Bureau d'Études Mécanique | EGI Conception CAO CATIA SolidWorks Calculs"
 date: "2024-10-25"
-description: "5 ingénieurs, 200m² de bureaux, CATIA V5, SolidWorks, Ansys : découvrez comment EGI conçoit vos solutions mécaniques sur mesure."
+description: "Bureau d'études mécanique : 5 ingénieurs experts en conception 3D (CATIA V5, SolidWorks), calculs de structure (Ansys, RDM), prototypage. Spécialiste aéronautique, machines spéciales, outillages."
 author: "Stéphane Leroux - Directeur EGI"
-tags: ["Bureau d'études", "EGI", "Conception"]
+tags: ["Bureau d'Études", "Conception Mécanique", "CAO", "CATIA V5", "SolidWorks", "Ingénierie"]
 locale: "fr"
 featured: false
 image: "/images/blog/bureau-etudes-egi.jpg"
