--- a/content/blog/certification-en-9100-lledo-industries.mdx
+++ b/content/blog/certification-en-9100-lledo-industries.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Certification EN 9100 : Notre Engagement Qualité"
+title: "Certification EN 9100 Aéronautique | LLEDO Industries Qualité Certifiée"
 date: "2024-11-01"
-description: "Comment LLEDO Industries maintient son excellence opérationnelle grâce à la certification EN 9100 et ses processus qualité rigoureux."
+description: "Certification EN 9100 aéronautique : découvrez comment LLEDO Industries garantit l'excellence en usinage de précision, tôlerie et maintenance industrielle. Processus qualité certifiés pour Airbus, Safran, Thales."
 author: "Service Qualité LLEDO"
-tags: ["Qualité", "Certification", "Aéronautique"]
+tags: ["EN 9100", "Certification Aéronautique", "Qualité Industrielle", "ISO 9001", "Traçabilité"]
 locale: "fr"
 featured: false
 image: "/images/blog/certification-en-9100.jpg"
