--- a/content/blog/groupe-lledo-36-ans-excellence-industrielle.mdx
+++ b/content/blog/groupe-lledo-36-ans-excellence-industrielle.mdx
@@ -1,9 +1,9 @@
 ---
-title: "36 Ans d'Excellence Industrielle LLEDO"
+title: "36 Ans d'Excellence Industrielle LLEDO | Usinage Précision & Aéronautique"
 date: "2024-11-06"
-description: "De 1989 à 2025 : retour sur 36 ans d'innovation, de croissance et d'excellence industrielle du groupe LLEDO Industries."
+description: "De 1989 à 2025 : découvrez 36 ans d'innovation en usinage de précision, tôlerie, maintenance industrielle et conception mécanique pour l'aéronautique. LLEDO Industries - Groupe industriel certifié EN 9100."
 author: "Gérard Lledo - Fondateur & Président"
-tags: ["Histoire", "LLEDO", "Anniversaire"]
+tags: ["Histoire LLEDO", "Usinage Précision", "Aéronautique", "Industrie Française", "EN 9100"]
 locale: "fr"
 featured: true
 image: "/images/blog/groupe-lledo-35-ans.jpg"
