--- a/content/blog/interview-gerard-lledo.mdx
+++ b/content/blog/interview-gerard-lledo.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Gérard Lledo : « En 1989, j'avais une Mazak d'occasion et beaucoup d'ambition »"
-description: "Rencontre avec Gérard Lledo, fondateur du groupe. De l'atelier de 200m² à un groupe de 70 personnes, retour sur 36 ans d'entrepreneuriat industriel français."
+title: "Gérard Lledo Interview | Fondateur LLEDO 36 Ans Success Story Industrie"
+description: "Interview exclusive Gérard Lledo : de l'atelier 200m² à un groupe industriel 70 personnes. 36 ans d'entrepreneuriat français, défis aéronautique, conseils dirigeants. Parcours inspirant PME."
 date: "2024-10-28"
 author: "Interview par la rédaction LLEDO"
-tags: ["Interview", "Histoire", "Gérard Lledo", "Entrepreneuriat"]
+tags: ["Gérard Lledo", "Entrepreneur Français", "Success Story", "Industrie Aéronautique", "PME"]
 locale: "fr"
 featured: true
 image: "/images/blog/gerard-lledo.jpg"
