--- a/content/blog/lledo-aerotools-gse-helicopteres.mdx
+++ b/content/blog/lledo-aerotools-gse-helicopteres.mdx
@@ -1,9 +1,9 @@
 ---
-title: "LLEDO Aerotools : Notre gamme GSE pour hélicoptères"
+title: "LLEDO Aerotools : Équipements GSE Hélicoptères | Chariots & Levage Certifiés"
 date: "2024-11-06"
-description: "Le Groupe LLEDO Industries développe une gamme complète d'équipements GSE pour hélicoptères légers sous la marque LLEDO Aerotools : chariots de roulage, systèmes de levage et barres de remorquage certifiés."
+description: "LLEDO Aerotools : fabricant français d'équipements GSE (Ground Support Equipment) pour hélicoptères. Chariots de roulage, systèmes de levage, barres de remorquage certifiés EN 12312. Conception, fabrication et maintenance."
 author: "Gérard Lledo - Président LLEDO Industries"
-tags: ["LLEDO Aerotools", "GSE", "Hélicoptères"]
+tags: ["LLEDO Aerotools", "GSE Hélicoptères", "Équipements Aéroportuaires", "Chariots Roulage", "Manutention Héliportée"]
 locale: "fr"
 featured: true
 image: "/images/blog/lledo-aerotools-gse.jpg"
