--- a/content/blog/maintenance-industrielle-frem.mdx
+++ b/content/blog/maintenance-industrielle-frem.mdx
@@ -1,9 +1,9 @@
 ---
-title: "FREM : Maintenance Industrielle Réactive"
+title: "Maintenance Industrielle 24/7 | FREM Dépannage Machines Outils Urgence"
 date: "2024-10-22"
-description: "4 techniciens, 2 camions atelier, intervention sous 24h : découvrez comment FREM assure la maintenance de vos équipements industriels."
+description: "Maintenance industrielle préventive et curative : intervention sous 24h, 4 techniciens experts, 2 camions atelier équipés. Dépannage machines-outils, hydraulique, pneumatique. Service 365j/an."
 author: "Patrick Lemaire - Responsable FREM"
-tags: ["Maintenance", "FREM", "Dépannage"]
+tags: ["Maintenance Industrielle", "Dépannage Machines", "Maintenance Préventive", "FREM", "Service Urgent"]
 locale: "fr"
 featured: false
 image: "/images/blog/maintenance-frem.jpg"
