--- a/content/blog/recrutement-formation-lledo.mdx
+++ b/content/blog/recrutement-formation-lledo.mdx
@@ -1,9 +1,9 @@
 ---
-title: "On recrute : Comment on forme nos futurs talents chez LLEDO"
-description: "De l'apprenti au chef d'équipe : parcours de formation et évolution de carrière chez LLEDO Industries. Témoignages de ceux qui ont gravi les échelons."
+title: "Recrutement Industrie Aéronautique | LLEDO Formation Alternance Carrière"
+description: "Emploi aéronautique : recrutement usineur CNC, soudeur, ingénieur. Formation interne, alternance, apprentissage. Évolution de carrière garantie. LLEDO Industries recrute talents secteur industriel."
 date: "2024-08-20"
 author: "RH LLEDO Industries"
-tags: ["Recrutement", "Formation", "Carrière", "Alternance"]
+tags: ["Recrutement Aéronautique", "Formation Professionnelle", "Alternance Industrie", "Carrière Usinage", "Emploi CNC"]
 locale: "fr"
 featured: false
 image: "/images/blog/formation-lledo.jpg"
