--- a/content/blog/tolerie-chaudronnerie-mgp.mdx
+++ b/content/blog/tolerie-chaudronnerie-mgp.mdx
@@ -1,9 +1,9 @@
 ---
-title: "MGP : Tôlerie, Chaudronnerie & Assemblage"
+title: "Tôlerie Chaudronnerie Industrielle | MGP Découpe Laser Soudage Inox"
 date: "2024-10-18"
-description: "2000m² d'atelier, découpe laser 6kW, pliage jusqu'à 135 tonnes, 8 soudeurs qualifiés : découvrez les capacités de MGP en tôlerie et chaudronnerie."
+description: "Tôlerie chaudronnerie sur mesure : découpe laser 6kW, pliage 135 tonnes, soudure TIG/MIG qualifiée. Spécialiste acier, inox, aluminium. 2000m² d'atelier. Secteurs aéro, énergie, BTP."
 author: "Bruno Lefèvre - Directeur MGP"
-tags: ["Tôlerie", "MGP", "Chaudronnerie"]
+tags: ["Tôlerie Industrielle", "Chaudronnerie", "Découpe Laser", "Soudure Qualifiée", "MGP", "Structures Métalliques"]
 locale: "fr"
 featured: false
 image: "/images/blog/tolerie-mgp.jpg"
