--- a/content/blog/une-journee-chez-mpeb.mdx
+++ b/content/blog/une-journee-chez-mpeb.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Une journée dans l'atelier MPEB : Immersion au cœur de l'usinage de précision"
-description: "Suivez-nous pour une journée complète dans notre atelier de 2500m² aux Pennes-Mirabeau. De 6h du matin jusqu'à la dernière pièce contrôlée à 17h."
+title: "Journée Atelier Usinage CNC | Immersion Production MPEB 6h-17h Réel"
+description: "Immersion complète 6h-17h dans atelier usinage précision 2500m². Suivez la production en temps réel : réglages CNC, contrôles, fabrication pièces aéronautiques. Coulisses métier usineur."
 date: "2024-11-05"
 author: "Thomas, Responsable Production MPEB"
-tags: ["MPEB", "Coulisses", "Production", "Quotidien"]
+tags: ["Atelier Usinage", "Production CNC", "MPEB", "Coulisses Industrie", "Métier Usineur"]
 locale: "fr"
 featured: true
 image: "/images/blog/journee-mpeb.jpg"
