--- a/content/blog/usinage-precision-aeronautique-lledo.mdx
+++ b/content/blog/usinage-precision-aeronautique-lledo.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Usinage de Précision : L'Excellence MPEB"
+title: "Usinage de Précision Aéronautique | MPEB 5 Axes CNC Titane Inconel"
 date: "2024-10-28"
-description: "Découvrez nos ateliers d'usinage de 2500m² et notre parc machine de 23 centres d'usinage CNC pour des pièces aéronautiques de haute précision."
+description: "Usinage de précision aéronautique : 2500m² d'atelier, 23 centres CNC 5 axes (Mazak, DMG, Haas). Spécialiste titane, Inconel, aluminium aéro. Sous-traitant Airbus, Safran. Certification EN 9100."
 author: "Jean-Marc Dubois - Directeur MPEB"
-tags: ["Usinage", "MPEB", "Précision"]
+tags: ["Usinage Précision", "Usinage 5 Axes", "Aéronautique", "Titane", "CNC", "MPEB"]
 locale: "fr"
 featured: true
 image: "/images/blog/usinage-precision.jpg"
