--- a/content/blog/usiner-le-titane.mdx
+++ b/content/blog/usiner-le-titane.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Usiner du titane TA6V : Le challenge technique que nos clients adorent nous confier"
-description: "Pourquoi le titane est-il si difficile à usiner ? Comment on s'y prend chez MPEB ? Immersion technique dans l'usinage d'un des matériaux les plus exigeants."
+title: "Usinage Titane TA6V | Fraisage Ti-6Al-4V Aéronautique Grade 5 Expert"
+description: "Usinage titane TA6V aéronautique : techniques fraisage 5 axes, paramètres de coupe, outillage carbure. Expert usinage Ti-6Al-4V (Grade 5) pour pièces moteurs Safran, Airbus. Guide complet."
 date: "2024-07-12"
 author: "Jean-Marc, Opérateur 5 axes senior"
-tags: ["Technique", "Titane", "Usinage", "MPEB"]
+tags: ["Usinage Titane", "TA6V", "Ti-6Al-4V", "Fraisage 5 Axes", "Aéronautique", "Matériaux Difficiles"]
 locale: "fr"
 featured: false
 image: "/images/blog/usinage-titane.jpg"
