Mise à jour majeure: Menu mobile moderne + Logo amélioré + Boutique Aerotools

--- a/src/i18n/locales/en/expertises.json
+++ b/src/i18n/locales/en/expertises.json
@@ -1,6 +1,6 @@
 {
-  "title": "Nos Expertises",
-  "subtitle": "Un collectif de 5 entités complémentaires pour couvrir l'ensemble de vos besoins en ingénierie industrielle",
+  "title": "Discover the companies of the LLEDO group",
+  "subtitle": "A collective of 5 complementary entities to cover all your industrial engineering needs",
   "list": [
     {
       "id": "mpeb",
