--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -1,14 +1,14 @@
 {
   "nav": {
     "home": "Accueil",
-    "expertises": "Nos moyens et outils industriels",
-    "vision": "Le groupe LLEDO Industrie",
+    "expertises": "Le groupe LLEDO",
+    "vision": "Notre Vision",
     "trust": "Ils nous font confiance",
     "blog": "Blog",
     "products": "Produits",
     "contact": "Contact",
-    "gerard": "Le groupe LLEDO Industrie",
-    "caseStudies": "Ils nous font confiance",
+    "gerard": "Groupe LLEDO",
+    "caseStudies": "Cas clients",
     "careers": "Carrières",
     "quote": "Obtenir un devis"
   },
