--- a/src/i18n/locales/fr/expertises.json
+++ b/src/i18n/locales/fr/expertises.json
@@ -1,5 +1,5 @@
 {
-  "title": "Nos Expertises",
+  "title": "Découvrez les entreprises du groupe LLEDO",
   "subtitle": "Un collectif de 5 entités complémentaires pour couvrir l'ensemble de vos besoins en ingénierie industrielle",
   "list": [
     {
