--- a/src/i18n/locales/fr/brochure.json
+++ b/src/i18n/locales/fr/brochure.json
@@ -15,7 +15,7 @@
       "size": "PDF - 1.8 Mo"
     },
     {
-      "title": "Certifications",
+      "title": "Process qualité",
       "description": "ISO 9001, EN 9100, Interchangeabilité AIRBUS, qualifications",
       "size": "PDF - 3.1 Mo"
     },
