--- a/src/i18n/locales/en/contact.json
+++ b/src/i18n/locales/en/contact.json
@@ -17,8 +17,8 @@
     },
     "email": {
       "label": "Email",
-      "value": "contact@lledo-industries.com",
-      "response": "Réponse sous 24h"
+      "value": "contact@mpeb13.com",
+      "response": "Response guaranteed within 24h on weekdays"
     },
     "address": {
       "label": "Adresse",
